Fix #10 (#11)
* Quiz supplied text

* Send related topics for quizzes off of supplied text

* Fix tests
